@@ -1,3 +1,3 @@
-#!/usr/local/bin/ruby18
+#!/usr/bin/ruby18
 require 'redcloth'
 puts RedCloth.new( ARGF.read ).to_html
